--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
-show_downloads: true
+title: DSA For E-Commerce domain
+description: Welcome to my work on algorithmic solutions to E-commerce domain.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
 
